Fix Menu overlap issue

--- a/src/Components/subComponents/Schedule.css
+++ b/src/Components/subComponents/Schedule.css
@@ -6,3 +6,7 @@ Button {
     position: sticky;
 }
   
+.weekdays {
+    padding-left: 250px;
+    padding-right: 40px;
+}
